# rc

./: CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  activate  aliases  envs  functions  pyproject.toml  scripts  setup  setup-via-ssh  update
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
envs.d/: 000_path  001_shell  android  charset  dotnet  general  git_completion.bash  git_completion.zsh  git_profiles  homebrew  networking  nvm  open_cv  path  pyvirtualenvwrapper  raspberry_pi  timezone
functions.d/: adb  amplify  clipboard  count  extract-gps-location-from-image  extract-images-from-pdf  free-port-after  mkcd  organize-images-and-videos-by-date  recurse-run  remind-me  serve  set-public-ip-to-extip-file  split-video  youtube-get
rc.d/: bashrc  envs  functions
rc.d/envs.d/: networking  node
rc.d/functions.d/: adb  clipboard  count  extract-gps-location-from-image  extract-images-from-pdf  git-as  organize-images-and-videos-by-date  recurse-run  remind-me  youtube-get
scripts/: source
scripts.d/git-as/: completions  source
scripts/completions/: __generic-help  adbw-brute-pair-completion.sh  amplify  amplify-completion.sh  clip-completion.sh  git-as  git-as-completion.sh  git-lsprofile  git-lsprofiles-completion.sh  git-mkprofile  git-rmprofile  ls-openports-completion.sh  mkcd-completion.sh  mssql-backup  mssql-backup-completion.sh  mssql-restore  noexif-completion.sh  pdf2img-extract-completion.sh  pointer-printer-completion.sh  rc-setup-completions-completion.sh  remind-me  (+13 more)
tools/: source
(+102 files in other folders)
